--- a/breath-clock.css
+++ b/breath-clock.css
@@ -18,6 +18,9 @@ body {
 .hide-cursor{
   cursor: none;
 }
+button{
+  box-shadow: 0px 0px 50px 35px rgb(17, 35, 55);
+}
 .box {
   position: relative;
   display: flex;
